# postkasse

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  dev.toml
src/: backup.rs  cli.rs  conf.rs  helpers.rs  main.rs  search.rs
src/backup/: email.rs  mailboxes.rs  progress.rs
src/cli/: backup.rs  cli.rs  mod.rs  search.rs
src/core/: email.rs  helpers.rs  jmap.rs  mailboxes.rs  mod.rs  progress.rs  search.rs  storage.rs
src/search/: email.rs
