[package]
name = "postkasse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
console = "0.15.7"
dialoguer = "0.11.0"
futures = "0.3.29"
indicatif = "0.17.7"
jmap-client = { version = "0.3.0", features = ["async"] }
keyring = "2.0.5"
opendal = "0.41.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
