[package]
name = "postkasse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.34"
clap = { version = "4.4.8", features = ["derive", "env"] }
config = "0.14.0"
console = "0.15.7"
dialoguer = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.2"
futures = "0.3.29"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
jmap-client = { version = "0.3.0", features = ["async"] }
keyring = "2.0.5"
lazy_static = "1.4.0"
log = "0.4"
mail-parser = "0.9.3"
opendal = "0.45.0"
rayon = "1.10.0"
serde = "1.0.193"
serde_json = "1.0.108"
tantivy = "0.21.1"
tokio = { version = "1.34.0", features = ["full"] }
